--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-typer= "^0.9.0"
-typer-config = {extras = ["yaml"], version = "^1.4.0"}
+typer = "^0.9.0"
+typer-config = { extras = ["yaml"], version = "^1.4.0" }
 gitpython = "^3.1.24"
 rich = "^13.7.1"
+
+[tool.poetry.scripts]
+prr = "prr.main:app"
 
 [build-system]
 requires = ["poetry-core"]
