--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "prrr"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "A simple CLI tool to help you write better PRs."
 authors = ["Oscar Nevarez <fu.wire@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.9.8"
 typer = "^0.9.0"
 typer-config = { extras = ["yaml"], version = "^1.4.0" }
 gitpython = "^3.1.24"
